aura: disable input throttling in tab dragging tests

Without this code thinks an event has been processed when it may not
have been, which leads to assertions failing. This is only an issue
with the Window Service, which triggers throttling more often.

BUG=817112
TEST=test only change

Change-Id: Ie290dcc827e4be67263f0430c540af271b16ab02
Reviewed-on: https://chromium-review.googlesource.com/954702
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541732}
Former-commit-id: 8aa27d12119f5fb594cf469dbdf9235506992daf