ui/aura/env.h
@@ -108,6 +108,12 @@ class AURA_EXPORT Env : public ui::EventTarget,
   }
   ui::ContextFactory* context_factory() { return context_factory_; }
 
+  // Sets |initial_throttle_input_on_resize| the next time Env is created. This
+  // is only useful in tests that need to disable input resize.
+  static void set_initial_throttle_input_on_resize_for_testing(
+      bool throttle_input) {
+    initial_throttle_input_on_resize_ = throttle_input;
+  }
   void set_throttle_input_on_resize_for_testing(bool throttle_input) {
     throttle_input_on_resize_ = throttle_input;
   }
@@ -211,7 +217,8 @@ class AURA_EXPORT Env : public ui::EventTarget,
   // creating a different WindowPort implementation.
   bool in_mus_shutdown_ = false;
 
-  bool throttle_input_on_resize_ = true;
+  static bool initial_throttle_input_on_resize_;
+  bool throttle_input_on_resize_ = initial_throttle_input_on_resize_;
 
   DISALLOW_COPY_AND_ASSIGN(Env);
 };
